test/bad/generics/type07.px

func f<Any A, Num B, Any C>(A*B*C p) def
    return

f(('$', '$', '$'))
